# n16-remote

./: BOM.md  JOURNAL.md  README.md  flake.nix
cad/: README.md  macropad.step
firmware/: .gitignore  Cargo.toml
firmware/src/: keyboard.rs  main.rs  usb.rs
firmware/src/keyboard/: config.rs  debouncer.rs  scanner.rs
firmware/src/keyboard/debouncer/: counter_debouncer.rs
firmware/src/keyboard/scanner/: matrix.rs
pcb/: fp-lib-table  hackpad.kicad_pcb  hackpad.kicad_pro  hackpad.kicad_sch  hackpad.step  hackpad.wrl
pcb/libs/OPL_Kicad_Library-master/Seeed Studio XIAO Series Library/: XIAO-RP2040-SMD.kicad_mod
pcb/libs/ScottoKicad/footprints/ScottoKeebs_Components.pretty/: LED_SK6812MINI.kicad_mod
pcb/libs/ScottoKicad/symbols/: ScottoKeebs.kicad_sym
pcb/production/: netlist.ipc
