[package]
name = "n16-remote-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"
panic-probe = "0.3.2"
embassy-rp = { version = "0.3.1", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4.0", features = ["defmt", "usbd-hid"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
usbd-hid = { version = "0.8.2", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
static_cell = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
